<resources>
    <string name="app_name">Car Pool</string>
    <string name="share_ride">Share Ride</string>
    <string name="want_ride">Book Ride</string>
    <string name="built_chat">In Built chat functionality</string>
    <string name="gmaps_nav">Google Maps Navigation</string>
    <string name="save_fuel">Save Fuel Save Earth</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password </string>
    <string name="credentials_missing">Credentials Missing</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Phone_no">Phone No. </string>
    <string name="enter_email_id">Enter email id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="app_logo">This is the app logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="profile">Profile</string>
    <string name="my_rides">My Rides</string>
    <string name="rides">Rides</string>
    <string name="post_ride">Post ride</string>
    <string name="request_ride">Request ride</string>
    <string name="profile_of_the_user">Profile of the user</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <string name="current_location_icon">Current location icon</string>
    <string name="destination_location_icon">Destination location icon</string>
    <string name="city_state">City, State</string>
    <string name="select_a_date">Select a date</string>
    <string name="select_a_time">Select a time</string>
    <string name="total_available_seats">Total available seats</string>
    <string name="your_address">Your address</string>
    <string name="enter_destination">Enter destination</string>
    <string name="search_ride">Search Ride</string>
    <string name="going_from">Going From</string>
    <string name="going_to">Going To</string>
    <string name="seats_available">Seats Available</string>
    <string name="close_the_dialog">Close the dialog</string>
    <string name="total_seats_needed">Total seats needed</string>
    <string name="confirm_ride">Confirm Ride</string>
</resources>
