<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueBackground"
    android:gravity="center"
    android:focusable="true"
    android:clickable="true"
    android:id="@+id/parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedBox"
        android:hint="@string/your_address"
        app:startIconDrawable="@drawable/ic_my_location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_current_address"
            style="@style/OutlinedBoxEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedBox"
        app:startIconDrawable="@drawable/ic_my_location"
        app:startIconTint="@color/blueBackground"
        android:layout_marginTop="-10dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_current_city"
            android:textColorHint="@color/bottom_bar_color"
            android:hint="@string/city_state"
            style="@style/OutlinedBoxEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedBox"
        android:hint="@string/enter_destination"
        app:startIconDrawable="@drawable/ic_destination">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_dest_address"
            style="@style/OutlinedBoxEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedBox"
        app:startIconDrawable="@drawable/ic_my_location"
        app:startIconTint="@color/blueBackground"
        android:layout_marginTop="-10dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_dest_city"
            android:textColorHint="@color/bottom_bar_color"
            android:hint="@string/city_state"
            style="@style/OutlinedBoxEditText" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedBox"
        android:hint="@string/select_a_date"
        app:startIconDrawable="@drawable/ic_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_date"
            style="@style/OutlinedBoxEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedBox"
        android:hint="@string/select_a_time"
        app:startIconDrawable="@drawable/ic_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_time"
            style="@style/OutlinedBoxEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedBox"
        android:hint="@string/total_available_seats"
        app:startIconDrawable="@drawable/ic_seat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_seats"
            style="@style/OutlinedBoxEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/green"
        android:padding="16dp"
        android:textSize="18sp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/request_ride"
        android:textColor="@color/blueBackground"
        android:textStyle="bold"
        app:cornerRadius="24dp" />

</LinearLayout>