<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.example.carpool.dialogFragments.PostRideDialogFragment" />
    </data>

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueBackground"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_close_dialog"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/close_the_dialog"
            android:onClick="@{() -> viewmodel.closeDialog()}"
            android:rotation="45"
            android:src="@drawable/ic_add" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedBox"
            android:layout_marginTop="100dp"
            android:hint="@string/city_state"
            app:startIconDrawable="@drawable/ic_my_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_current_city"
                style="@style/OutlinedBoxEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedBox"
            android:hint="@string/city_state"
            app:startIconDrawable="@drawable/ic_destination">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_dest_city"
                style="@style/OutlinedBoxEditText" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedBox"
            android:hint="@string/select_a_date"
            app:startIconDrawable="@drawable/ic_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_date"
                style="@style/OutlinedBoxEditText"
                android:inputType="date"
                android:clickable="false"
                android:focusable="false"
                android:onClick="@{() -> viewmodel.selectDate()}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedBox"
            android:hint="@string/select_a_time"
            app:startIconDrawable="@drawable/ic_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_time"
                style="@style/OutlinedBoxEditText"
                android:inputType="time"
                android:clickable="false"
                android:focusable="false"
                android:onClick="@{() -> viewmodel.selectTime()}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedBox"
            android:hint="@string/total_available_seats"
            app:startIconDrawable="@drawable/ic_seat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_seats"
                android:inputType="number"
                style="@style/OutlinedBoxEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/green"
            android:onClick="@{() -> viewmodel.postRide()}"
            android:padding="16dp"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:text="@string/post_ride"
            android:textColor="@color/blueBackground"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="24dp" />

    </LinearLayout>

</layout>